import("//build/config/compiler/compiler.gni")
import("//build/config/features.gni")

if (is_android) {
  import("//build/config/android/config.gni")
}

declare_args() {
  # A list of extra dependencies to add to the root target. This allows a
  # checkout to add additional targets without explicitly changing any checked-
  # in files.
  root_extra_deps = []
}

group("gn_all") {
  deps = [
     "//base:base",
     "//sample/trace:trace",
  ]
}